--- a/app/src/main/res/layout/activity_comm_test.xml
+++ b/app/src/main/res/layout/activity_comm_test.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hu.bme.aut.smeyelframework.functions.communicationtest.CommTestActivity">
+    tools:context="hu.bme.aut.smeyelframework.functions.tests.CommTestActivity">
 
     <TextView
         android:text="@string/hello_world"
