RarItem can be toString-ed properly. Remove CommunicationThread, introduce InboundCommunicationThread + many related stuff. Create EventActivity base class to properly init events. (Might not be needed later)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,13 @@
                 android:layout_height="wrap_content"
                 android:text="Timing test" />
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CameraPreview Test"
+                android:id="@+id/camPrevTest"
+                android:layout_gravity="center_horizontal" />
+
         </LinearLayout>
 
     </ScrollView>
