--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -8,10 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="hu.bme.aut.smeyelframework.functions.CameraPreviewActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/preview"
+    <SurfaceView
+        android:id="@+id/cameraPreview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
