CameraHelper can record video (only once per instance -> TODO allow for multiple times). CameraPreviewActivity: Take 5 photos as fast as possible, then save them on button press. New activity to record video.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,13 @@
                 android:id="@+id/camPrevTest"
                 android:layout_gravity="center_horizontal" />
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Find LED"
+                android:id="@+id/findLed"
+                android:layout_gravity="center_horizontal" />
+
         </LinearLayout>
 
     </ScrollView>
