--- a/app/src/main/res/layout/activity_led.xml
+++ b/app/src/main/res/layout/activity_led.xml
@@ -1,12 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hu.bme.aut.smeyelframework.functions.CameraPreviewActivity">
+    tools:context="hu.bme.aut.smeyelframework.functions.LedActivity">
 
     <SurfaceView
         android:id="@+id/cameraPreview"
@@ -16,19 +14,19 @@
         android:layout_alignParentLeft="true" />
 
     <Button
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Take 5"
-        android:id="@+id/take5"
+        android:text="Start"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true" />
 
     <Button
+        android:id="@+id/stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:id="@+id/save"
-        android:layout_below="@+id/take5"
+        android:text="Stop"
+        android:layout_below="@+id/start"
         android:layout_alignParentRight="true" />
 
 </RelativeLayout>
