--- a/app/src/main/res/layout/activity_led.xml
+++ b/app/src/main/res/layout/activity_led.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -6,27 +7,45 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="hu.bme.aut.smeyelframework.functions.LedActivity">
 
-    <SurfaceView
-        android:id="@+id/cameraPreview"
-        android:layout_width="640px"
-        android:layout_height="480px"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+    <!--<SurfaceView-->
+        <!--android:id="@+id/cameraPreview"-->
+        <!--android:layout_width="640px"-->
+        <!--android:layout_height="480px"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignParentLeft="true" />-->
 
-    <Button
-        android:id="@+id/start"
+    <!--<ImageView-->
+        <!--android:layout_width="640px"-->
+        <!--android:layout_height="480px"-->
+        <!--android:id="@+id/processed"-->
+        <!--android:layout_below="@+id/cameraPreview"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_marginTop="5dp" />-->
+
+    <org.opencv.android.JavaCameraView
+        android:id="@+id/cameraImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true" />
+        opencv:show_fps="false"
+        opencv:camera_id="any" />
 
-    <Button
-        android:id="@+id/stop"
+    <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stop"
-        android:layout_below="@+id/start"
-        android:layout_alignParentRight="true" />
+        android:text="New ToggleButton"
+        android:id="@+id/modeToggle"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:enabled="true"
+        android:textOff="Measure!"
+        android:textOn="Find LED!" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/displayTv"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
